--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,6 @@ html {
     font-size: 100%; /* This will be overridden by the settings context */
 }
 
-html, body {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-}
-
 a:hover {
     @apply text-primary;
 }
